--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,12 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# CMake build directories
+cmake-build-debug/
+cmake-build-release/
+
+# Build output
+build/
+bin/
+lib/
