Fixed libary inclusion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,13 +24,14 @@ add_executable(Main src/main.cpp
 # CMakeLists.txt
 
 cmake_minimum_required(VERSION 3.26)
+
 project(Filey VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# Find the OpenSSL package
 find_package(OpenSSL REQUIRED)
-#target_link_libraries(untitled OpenSSL::SSL)
 
 # Füge die Verzeichnisse mit Header-Dateien und Quelldateien hinzu
 include_directories(include)
@@ -39,6 +40,9 @@ file(GLOB SOURCES "src/*.cpp")
 # Füge die ausführbare Datei hinzu
 add_executable(Filey src/main.cpp)
 
+# Verknüpfe OpenSSL mit dem Hauptprogramm
+target_link_libraries(Filey OpenSSL::SSL)
+
 # Füge die Unterprojekte (Bibliotheken) hinzu
 add_subdirectory(logger)
 add_subdirectory(fileprocessor)
@@ -46,3 +50,4 @@ add_subdirectory(hasher)
 
 # Verknüpfe die Bibliotheken mit dem Hauptprogramm
 target_link_libraries(Filey Logger FileProcessor Hasher)
+
