Added Apple support. Try 2.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,15 +31,11 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 if(APPLE)
-    # Set the paths for Homebrew's OpenSSL
-    # Adjust the path if necessary depending on the architecture (Intel vs Apple Silicon)
-    set(OPENSSL_ROOT_DIR /usr/local/opt/openssl)
-    set(OPENSSL_CRYPTO_LIBRARY /usr/local/opt/openssl/lib)
-    set(OPENSSL_INCLUDE_DIR /usr/local/opt/openssl/include)
+    # Modify the path as necessary for your system (Intel or Apple Silicon)
+    find_package(OpenSSL REQUIRED HINTS /usr/local/opt/openssl /opt/homebrew/opt/openssl)
+else()
+    find_package(OpenSSL REQUIRED)
 endif()
-
-# Find the OpenSSL package
-find_package(OpenSSL REQUIRED)
 
 # Füge die Verzeichnisse mit Header-Dateien und Quelldateien hinzu
 include_directories(include)
